Fix libreria deprecata